[package]
name = "crabmate-internal"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CrabMate internal services (tools, SSE, workspace, MCP, memory)"

[features]
default = []
project_metrics = ["crabmate-tools/project_metrics", "dep:tokei"]
mcp = ["dep:rmcp", "crabmate-config/mcp"]
docker_sandbox = ["dep:bollard", "crabmate-config/docker_sandbox"]
fastembed = ["crabmate-memory/fastembed", "crabmate-config/fastembed", "crabmate-tools/fastembed"]

[dependencies]
cmd_mate = { workspace = true }
crabmate-config = { workspace = true }
crabmate-dsml = { workspace = true }
crabmate-llm = { workspace = true }
crabmate-memory = { workspace = true }
crabmate-sse-protocol = { workspace = true }
crabmate-tools = { workspace = true }
crabmate-types = { workspace = true }
async-trait = { workspace = true }
dialoguer = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "blocking", "rustls-tls"] }
rmcp = { version = "1.4", optional = true, default-features = false, features = [
    "client",
    "server",
    "transport-child-process",
    "transport-io",
] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-log = "0.2"
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
    "local-time",
    "time",
] }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "net",
    "process",
    "io-util",
] }
tokei = { workspace = true, optional = true }
bollard = { version = "0.21", optional = true, default-features = false, features = [
    "http",
    "pipe",
] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "dir", "signal", "term", "process"] }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
