[package]
name = "crabmate-llm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "OpenAI-compatible LLM client layer for CrabMate (vendor adapters, HTTP, errors)"

[dependencies]
async-trait = "0.1"
crabmate-config = { path = "../crabmate-config" }
crabmate-sse-protocol = { path = "../crabmate-sse-protocol" }
crabmate-types = { path = "../crabmate-types" }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync", "time"] }

[dev-dependencies]
crabmate-config = { path = "../crabmate-config" }
