[package]
name = "crabmate-llm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "OpenAI-compatible LLM client layer for CrabMate (vendor adapters, HTTP, errors)"

[dependencies]
async-trait = { workspace = true }
crabmate-config = { workspace = true }
crabmate-sse-protocol = { workspace = true }
crabmate-types = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", default-features = false, features = ["sync", "time"] }

[dev-dependencies]
crabmate-config = { workspace = true }
