[package]
name = "crabmate-memory"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CrabMate long-term memory and semantic index"

[features]
default = []
fastembed = ["dep:fastembed", "crabmate-config/fastembed"]

[dependencies]
crabmate-config = { path = "../crabmate-config" }
crabmate-llm = { path = "../crabmate-llm" }
crabmate-sse-protocol = { path = "../crabmate-sse-protocol" }
crabmate-tools = { path = "../crabmate-tools" }
crabmate-types = { path = "../crabmate-types" }
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
fastembed = { version = "5.13", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
glob = "0.3"
ignore = "0.4"
log = "0.4"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "sync",
    "time",
    "fs",
] }
tracing = "0.1"

[dev-dependencies]
proptest = "1"
serde_json = "1"
tempfile = "3"
