[package]
name = "crabmate-memory"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CrabMate long-term memory and semantic index"

[features]
default = []
fastembed = ["dep:fastembed", "crabmate-config/fastembed"]

[dependencies]
crabmate-config = { workspace = true }
crabmate-llm = { workspace = true }
crabmate-sse-protocol = { workspace = true }
crabmate-tools = { workspace = true }
crabmate-types = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
fastembed = { version = "5.13", optional = true }
futures-util = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "sync",
    "time",
    "fs",
] }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
