[package]
name = "crabmate-tools"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CrabMate tool implementations (file ops, git, search, web fetch, etc.)"

[features]
default = []
project_metrics = ["dep:tokei"]
fastembed = []

[dependencies]
crabmate-config = { path = "../crabmate-config" }
crabmate-types = { path = "../crabmate-types" }
cmd_mate = { path = "../cmd_mate" }
async-trait = "0.1"
base64 = "0.22"
bzip2 = "0.6"
chardetng = "1.0"
chrono = "0.4"
csv = "1.3"
dialoguer = { version = "0.12", default-features = false }
diffy = "0.5"
ego-tree = "0.11"
encoding_rs = "0.8"
flate2 = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
glob = "0.3"
ignore = "0.4"
jsonschema = { version = "0.47", default-features = false }
libc = "0.2"
log = "0.4"
path-absolutize = "4"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
schemars = { version = "0.8", features = ["derive"] }
scraper = "0.27.0"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
sha2 = "0.11"
similar = "3.1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokei = { version = "14", optional = true, default-features = false }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "net",
    "process",
    "io-util",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
urlencoding = "2.1"
walkdir = "2"
xz2 = "0.1"
zip = "8.6"
uom = { version = "0.38", features = ["si"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["fs", "dir", "signal", "term", "process"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"
tempfile = "3"
