[package]
name = "crabmate-tools"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CrabMate tool implementations (file ops, git, search, web fetch, etc.)"

[features]
default = []
project_metrics = ["dep:tokei"]
fastembed = []

[dependencies]
crabmate-config = { workspace = true }
crabmate-types = { workspace = true }
cmd_mate = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bzip2 = { workspace = true }
chardetng = "1.0"
chrono = { workspace = true }
csv = { workspace = true }
dialoguer = { workspace = true }
diffy = { workspace = true }
ego-tree = { workspace = true }
encoding_rs = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
jsonschema = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
path-absolutize = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "blocking", "default-tls"] }
schemars = { workspace = true }
scraper = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
similar = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokei = { workspace = true, optional = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "net",
    "process",
    "io-util",
] }
tokio-stream = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
walkdir = { workspace = true }
xz2 = { workspace = true }
zip = { workspace = true }
uom = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "dir", "signal", "term", "process"] }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
