[package]
name = "crabmate-turn-layout"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Canonical agent turn layout (OpenAI/AG-UI aligned) and chat bubble projection for CrabMate"

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"
