[package]
name = "crabmate-turn-layout"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Canonical agent turn layout (OpenAI/AG-UI aligned) and chat bubble projection for CrabMate"

[lib]
path = "lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
