[package]
name = "crabmate-types"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "OpenAI-compatible chat message and API types for CrabMate (SDK foundation)"

[dependencies]
crabmate-display-rules = { path = "../crabmate-display-rules" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
