[package]
name = "crabmate-types"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "OpenAI-compatible chat message and API types for CrabMate (SDK foundation)"

[dependencies]
crabmate-display-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
