[package]
name = "crabmate-desktop"
version = "0.1.0"
description = "CrabMate desktop shell powered by Tauri"
authors = ["crabmate contributors"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
victauri-plugin = { version = "0.8", optional = true }
tokio = { version = "1", features = ["sync"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
victauri-test = "0.8"
victauri-plugin = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
victauri = ["dep:victauri-plugin"]

[workspace]
